# mecanum-nav-robot

./: README.md  gitignore
map/: my_map.yaml
src/: frames_2026-06-28_03.13.54.gv
src/auto_patrol/: package.xml  setup.py
src/auto_patrol/auto_patrol/: patrol.py
src/mecanum_odom/: package.xml  setup.cfg  setup.py
src/mecanum_odom/mecanum_odom/: odom_node.py
src/robo_bringup/: CMakeLists.txt  package.xml
src/robo_bringup/config/: mapper_params_online_async.yaml  nav2_params.yaml
src/robo_bringup/launch/: auto_patrol_nav.launch.py  navigation.launch.py  slam.launch.py
src/robo_desc/: CMakeLists.txt  frames_2026-06-26_18.43.29.gv  my_map.pgm  package.xml
src/robo_desc/config/: nav.rviz  new.rviz  ros_gz_bridge_gazebo_2.yaml
src/robo_desc/launch/: display.launch.py  gazebo.launch.py  gazebo_n.launch.py  gazebo_s.launch.py
src/robo_desc/meshes/: base_link.stl  base_link2.stl  extra.stl  led.stl  lidar.stl  switch.stl
src/robo_desc/urdf/: robot copy.xacro  robot.gazebo  robot.xacro  robot_manthan.urdf  robot_work.xacro
src/robo_desc/world/: download_fuel_models.sh  new.sdf  ware2.sdf
