<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_bringup</name>
  <version>0.1.0</version>
  <description>
    Single-command bringup for mapping (SLAM) and navigation (Nav2),
    on top of the robo_desc simulation and mecanum_odom packages.
  </description>
  <maintainer email="nandanaams555@gmail.com">haha</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robo_desc</exec_depend>
  <exec_depend>mecanum_odom</exec_depend>
  <exec_depend>auto_patrol</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
